--- a/docs/custom/autosuggest.yml
+++ b/docs/custom/autosuggest.yml
@@ -2,18 +2,18 @@ openapi: 3.0.3
 info:
   title: Autosuggest API
   description: >-
-    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://www.mapmyindia.com/api/advanced-maps/doc/authentication-api.php). <br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br> <strong>Global Coverage</strong> Now Available ! <br>Autosuggest API is **Now Available**  for [238 countries](https://github.com/MapmyIndia/mapmyindia-rest-api/blob/master/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of MapmyIndia's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between MapmyIndia & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact MapmyIndia API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li><li>`lang` is a premium response parameter linked to our regional language support. Only clients who have specific agreements for its usage will be able to get this in their response parameter.</li><li>The maximum length of valid input query is 45. For longer queries, API will return 400 Bad Request - Too Long Input</li></ol>
-  termsOfService: 'https://www.mapmyindia.com/api/terms-&-conditions'
+    This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://www.mapmyindia.com/api/advanced-maps/doc/authentication-api.php). <br><br>The API leverages OAuth 2.0 based security. Hence, the developer would need to send a request for access token using their client_id and client_secret to the OAuth API. Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: "{`token_type`} {`access_token`}”. <br><strong>Authorization</strong>: `token_type` `access_token`.<br><br> <strong>Global Coverage</strong> Now Available ! <br>Autosuggest API is **Now Available**  for [238 countries](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs/Parameters</strong> are not available for evalulation on signup. To get access, please contact API Support.</li><li>`lang` is a premium response parameter linked to our regional language support. Only clients who have specific agreements for its usage will be able to get this in their response parameter.</li><li>The maximum length of valid input query is 45. For longer queries, API will return 400 Bad Request - Too Long Input</li></ol>
+  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
-    name: MapmyIndia License Key Signup
-    url: https://www.mapmyindia.com/api/
+    name: Mappls License Key Signup
+    url: https://www.mappls.com/api/
   contact:
-    name: MapmyIndia API Support
-    email: apisupport@mapmyindia.com
-    url: https://www.mapmyindia.com/api/
+    name: Mappls API Support
+    email: apisupport@mappls.com
+    url: https://www.mappls.com/api/
 servers:
-  - url: 'https://atlas.mapmyindia.com'
+  - url: 'https://atlas.mappls.com'
     description: 'Live Prod server for OAuth 2 based APIs'
 security: 
   - BearerAuth: []
@@ -24,7 +24,7 @@ paths:
         - Autosuggest API
       description: >-
         The Autosuggest API helps users to complete queries faster by adding intelligent search capabilities to your web or mobile app. This API returns a list of results as well as suggested queries as the user types in the search field. This API also supports Hindi language. If a user enters query in hindi language he will get results in Hindi.<br>This APIs follow OAuth2 based security. **To know more on how to create your authorization tokens, please use our authorization token URL. More details available**  [here](https://www.mapmyindia.com/api/advanced-maps/doc/authentication-api.php).
-        <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-vector-maps-auto-suggest-api-example.php">Live Demo</a> | <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/tree/master/mapmyindia-maps-auto-suggest-api-example">Download Sample Code</a> </p>
+        <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-vector-maps-auto-suggest-api-example.php">Live Demo</a></p>
       summary: >-
          AutoSuggest API
       operationId: AutoSuggestAPI
@@ -56,7 +56,7 @@ paths:
             type: string
         - name: region
           in: query
-          description: 'It takes in the country code. Possible values are listed in a table [here](https://github.com/MapmyIndia/mapmyindia-rest-api/blob/master/docs/countryISO.md). Default is India (IND).'
+          description: 'It takes in the country code. Possible values are listed in a table [here](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md). Default is India (IND).'
           example: "IND"
           required: false
           allowEmptyValue: false
@@ -192,7 +192,7 @@ components:
           example: 'POI'
         typeX:
           type: integer
-          description: 'Type attribute for internal use only for MapmyIndia.'
+          description: 'Type attribute for internal use only for Mappls.'
           format: integer
           example: 7
         placeAddress:
@@ -212,7 +212,7 @@ components:
           example: 'RESTRICTED'
         eLoc:
           type: string
-          description: 'It is the Six or eight digit unique code offered only by mapmyindia to search for any address through this eLoc.'
+          description: 'It is the Six or eight digit unique code offered only by mappls to search for any address through this eLoc.'
           format: string
           example: '2LH9OC'
         entryLatitude:
@@ -288,7 +288,7 @@ components:
       properties:
         eLoc:
           type: string
-          description: 'It is the Six or eight digit unique code offered only by mapmyindia to search for any address through this eLoc.'
+          description: 'It is the Six or eight digit unique code offered only by mappls to search for any address through this eLoc.'
           format: string
           example: '2LH9OC'
         entryLatitude:
@@ -371,7 +371,7 @@ components:
           type: string
           description: 'direct link of the poi.'
           format: string
-          example: 'https://atlas.mapmyindia.com/api/places/nearby/json?explain&richData&username=atlasuser&refLocation=28.550592,77.26877&keywords=hsptst'
+          example: 'https://atlas.mappls.com/api/places/nearby/json?explain&richData&username=atlasuser&refLocation=28.550592,77.26877&keywords=hsptst'
         orderIndex:
           type: integer
           description: 'This shows the order of the search results priority wise.'
@@ -379,7 +379,7 @@ components:
           example: 0
         eLoc:
           type: string
-          description: 'It is the Six or eight digit unique code offered only by mapmyindia to search for any address through this eLoc.'
+          description: 'It is the Six or eight digit unique code offered only by mappls to search for any address through this eLoc.'
           format: string
           example: 'null'
     NB3:
