--- a/docs/custom/routingDriving.yml
+++ b/docs/custom/routingDriving.yml
@@ -2,18 +2,18 @@ openapi: 3.0.3
 info:
   title: Routing API for Passenger Vehicles
   description: >-
-    <br><br> <strong>Global Coverage</strong> Now Available ! <br>Routing API is **Now Available**  for [238 countries](https://github.com/MapmyIndia/mapmyindia-rest-api/blob/master/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of MapmyIndia's Search APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between MapmyIndia & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact MapmyIndia API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
-  termsOfService: 'https://www.mapmyindia.com/api/terms-&-conditions'
+    <br><br> <strong>Global Coverage</strong> Now Available ! <br>Routing API is **Now Available**  for [238 countries](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md) across the world.<br><br>**Note**: <ol> <li> The response listed in the below documentation is ONLY indicative of the overall capabilities of Mappls's Routing APIs. </li><li> Not all response parameters mentioned in the below documentation is assured to be present in all the use-cases. The response of any of the below search API is thus, dependent on the use-case agreed upon between Mappls & it's API consumer. </i><li> For any further clarifications on what all of the response structure is available for your use case, please contact your business relationship manager or contact Mappls API support.</li><li> <strong>PREMIUM APIs</strong> are not available for evalulation on signup. To get access, please contact API Support.</li></ol>
+  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
-    name: MapmyIndia License Key Signup
-    url: https://www.mapmyindia.com/api/
+    name: Mappls License Key Signup
+    url: https://www.mappls.com/api/
   contact:
-    name: MapmyIndia API Support
-    email: apisupport@mapmyindia.com
-    url: https://www.mapmyindia.com/api/
+    name: Mappls API Support
+    email: apisupport@mappls.com
+    url: https://www.mappls.com/api/
 servers:
-  - url: https://apis.mapmyindia.com/advancedmaps/v1
+  - url: https://apis.mappls.com/advancedmaps/v1
     description: 'Live Prod server for Routing APIs'
 paths:
   /{REST_KEY}/{resources}/driving/{geopositions}:
@@ -22,7 +22,7 @@ paths:
         - Routing API with Driving Profile
       description: >-
         Routing and displaying driving directions on map, including instructions for navigation, distance to destination, traffic etc. are few of the most important parts of developing a map based application. This REST API calculates driving routes between specified locations including via points based on route calculation type(optimal or shortest).<br>Please note that maximum number of points are limited to 100 only including source and secondary positions.
-        <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-maps-route-adv-api-example">Live Demo</a> | <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/tree/master/mapmyindia-routing-api">Download Sample Code</a> </p>
+        <p style=text-align:right><strong><a href="https://www.mapmyindia.com/api/advanced-maps/doc/sample/mapmyindia-maps-route-adv-api-example">Live Demo</a></p>
       summary: Routing API with driving profile
       operationId: routingAPI
       parameters: 
@@ -37,7 +37,7 @@ paths:
         - name: resources
           in: path
           description: >-
-            The different resources available within MapmyIndia Routing API. These resources have their own individual allocations and not all are allocated for evalulations be default. <br>For allocating particular resource on your API credentials, please contact <code>apisupport@mapmyindia.com</code>
+            The different resources available within Mappls Routing API. These resources have their own individual allocations and not all are allocated for evalulations be default. <br>For allocating particular resource on your API credentials, please contact <code>apisupport@mappls.com</code>
                 <div class="tablenoborder">
                 <table cellpadding="4" cellspacing="0" summary="" id="request-constructing__table-basic-request-elements" frame="hsides" border="1" rules="all">
                   <caption>
@@ -121,7 +121,7 @@ paths:
         - name: steps
           in: query
           description: >-
-            Return route steps for each route leg. Possible values are true/false. By default it will be used as false. <Recommended=false; unless otherwise recommended by MapmyIndia>
+            Return route steps for each route leg. Possible values are true/false. By default it will be used as false. <Recommended=false; unless otherwise recommended by Mappls>
           allowEmptyValue: false
           schema:
             type: boolean
@@ -140,7 +140,7 @@ paths:
         - name: region
           in: query
           description: >-
-            This parameter is optional for India; for other countries (such as Sri Lanka, Nepal, Bangladesh, Bhutan + many more) this parameter is mandatory. Possible values are listed in a table [here](https://github.com/MapmyIndia/mapmyindia-rest-api/blob/master/docs/countryISO.md).
+            This parameter is optional for India; for other countries (such as Sri Lanka, Nepal, Bangladesh, Bhutan + many more) this parameter is mandatory. Possible values are listed in a table [here](https://github.com/Mappls-api/mappls-rest-api/blob/master/docs/countryISO.md).
           allowEmptyValue: false
           schema:
             type: string
@@ -480,13 +480,13 @@ components:
           type: string
           title: 'modifier'
           description: >-
-             An optional string indicating the direction change of the maneuver. To see the complete list of modifiers, please see <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/wiki/modifiers">article</a> in wiki.
+             An optional string indicating the direction change of the maneuver. To see the complete list of modifiers, please see <a href="https://github.com/Mappls-api/mappls-rest-api/wiki/modifiers">article</a> in wiki.
           example: "left"
         type: 
           type: string
           title: 'type'
           description: >-
-             A string indicating the type of maneuver. New identifiers might be introduced without API change. Types unknown to the client should be handled like the ‘turn’ type, the existence of correct modifier values is guaranteed. To see the complete list of types, please see <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/wiki/types">article</a> in wiki.
+             A string indicating the type of maneuver. New identifiers might be introduced without API change. Types unknown to the client should be handled like the ‘turn’ type, the existence of correct modifier values is guaranteed. To see the complete list of types, please see <a href="https://github.com/Mappls-api/mappls-rest-api/wiki/types">article</a> in wiki.
           example: "turn"
     intersections: 
       title: intersections object
@@ -571,5 +571,5 @@ components:
             type: string  
           title: 'indications'
           description: >-
-             Indicating a sign of directions like Straight, Slight Left, Right, etc. To see the complete list of indications, please see <a href="https://github.com/MapmyIndia/mapmyindia-rest-api/wiki/indications">article</a> in wiki.
+             Indicating a sign of directions like Straight, Slight Left, Right, etc. To see the complete list of indications, please see <a href="https://github.com/Mappls-api/mappls-rest-api/wiki/indications">article</a> in wiki.
           example: ["straight", "slight left"]
