--- a/docs/custom/tokenGeneration.yml
+++ b/docs/custom/tokenGeneration.yml
@@ -4,17 +4,17 @@ info:
   description: >-
     This API is required to generate tokens authorize the oAuth 2 based APIs. <br> Hence, the developer would need to send a request for access token using their client_id and client_secret to the Token Generation API. <br>Once validated from the OAuth API, the access_token and the token_type need to be sent as Authorization header with the value: <strong> {token_type} {access_token} </strong>
             <br><br> <code>Authorization: {token_type} {access_token}</code>.
-  termsOfService: 'https://www.mapmyindia.com/api/terms-&-conditions'
+  termsOfService: 'https://www.mappls.com/api/terms-&-conditions'
   version: 1.0.0
   license:
-    name: MapmyIndia License Key Signup
-    url: https://www.mapmyindia.com/api/
+    name: Mappls License Key Signup
+    url: https://www.mappls.com/api/
   contact:
-    name: MapmyIndia API Support
-    email: apisupport@mapmyindia.com
-    url: https://www.mapmyindia.com/api/
+    name: Mappls API Support
+    email: apisupport@mappls.com
+    url: https://www.mappls.com/api/
 servers:
-  - url: https://outpost.mapmyindia.com/api
+  - url: https://outpost.mappls.com/api
     description: 'Live Prod Server for Token Generation API'
 paths:
   /security/oauth/token: 
@@ -69,7 +69,7 @@ paths:
         '503':
           description: Maintenance break.
       servers:
-        - url: https://outpost.mapmyindia.com/api
+        - url: https://outpost.mappls.com/api
           description: 'Live Prod Server for Token Generation API'
 components:
   schemas:
